--- a/packages/debian/control
+++ b/packages/debian/control
@@ -1,4 +1,4 @@
-Source: musicbrainzproxydbus
+Source: musicbrainz-proxy-dbus
 Priority: optional
 Section: devel
 Build-Depends: python (>= 2.5), debhelper (>= 7), python-support (>= 0.5.3), python-setuptools
@@ -6,7 +6,7 @@ Standards-Version: 3.8.0
 Maintainer: Jean-Lou Dupont <jl@jldupont.com>
 Homepage: http://www.systemical.com/
 
-Package: musicbrainzproxydbus
+Package: musicbrainz-proxy-dbus
 Architecture: all
 Depends: python-musicbrainz2 (>= 0.6.0), python (>= 2.5), ${misc:Depends}, ${python:Depends}
 Description: Proxy service over Dbus for Musicbrainz webservice.
